[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://material/shader/Shield.tres" type="Material" id=2]
[ext_resource path="res://buffs/shield/Shield.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/intense_multiplier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "shock"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/intense_multiplier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4.0, 9.0 ]
}

[node name="Shield" type="Sprite"]
material = ExtResource( 2 )
texture = ExtResource( 1 )
script = ExtResource( 3 )
shield_charges = 5

[node name="ShieldAnimator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/shock = SubResource( 2 )

[node name="ShieldArea" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShieldArea"]
polygon = PoolVector2Array( -8, 0, 0, 0, 0, -32, -22, -23, -32, 0 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="ShieldArea"]
polygon = PoolVector2Array( 0, 0, 32, 0, 23, -22, 0, -32 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="ShieldArea"]
polygon = PoolVector2Array( 0, 0, 32, 0, 24, 20, 0, 32 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="ShieldArea"]
polygon = PoolVector2Array( 0, 0, -32, 0, -24, 21, 0, 32 )

[connection signal="area_shape_entered" from="ShieldArea" to="." method="_on_ShieldArea_area_shape_entered"]
